--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -14,13 +14,24 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #ffffff;
     --foreground: #ededed;
   }
 }
 
 body {
-  background: var(--background);
+  background: #fff !important;
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+@font-face {
+  font-family: 'DocallismeOnStreet';
+  src: url('../public/fonts/DocallismeOnStreet-ZVO1Z.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+.font-docallisme {
+  font-family: 'DocallismeOnStreet', Arial, Helvetica, sans-serif !important;
 }
